--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,6 @@ services:
         POSTGRES_PASSWORD: ${DB_PASSWORD}
         POSTGRES_DB: ${DB_NAME}
     ports:
-        - "5432:5432"
+        - ${DB_PORT}:5432
     volumes:
       - ./postgres:/var/lib/postgres
