--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,45 @@
 version: "3.8"
 services:
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: nestjs-app
+    restart: always
+    ports:
+      - "8080:8080"
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - .:/app
+      - /app/node_modules
+    networks:
+      - app
+    depends_on:
+      - db
+
+
   db:
-    image: postgres:14.3
+    image: postgres:16.2
     container_name: todo-database
     cap_add:
       - SYS_NICE
     restart: always
     environment:
-        POSTGRES_USER: ${DB_USER}
-        POSTGRES_PASSWORD: ${DB_PASSWORD}
-        POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
-        - ${DB_PORT}:5432
+      - ${DB_PORT}:5432
     volumes:
       - ./postgres:/var/lib/postgres
+    networks:
+      - app
+
+networks:
+  app:
