--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      "^.+\\.tsx?$": "babel-jest"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
