--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Image for todo-app
 
 on:
   push:
@@ -8,11 +8,13 @@ on:
 
 jobs:
 
-  build:
-
+  build_and_publish_docker_image:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag todo-server-app:$(date +%s)
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Build and push Docker image
+        run: |
+          docker login -u ${{ secrets.GH_US }} -p ${{ secrets.GH_PAT }}
+          docker build . -t todo-app/$GITHUB_REPOSITORY_NAME:$GITHUB_SHA:latest
+          docker push todo-app/$GITHUB_REPOSITORY_NAME:$GITHUB_SHA:latest
