--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Build and push Docker image
         run: |
-          docker login -username ${{ secrets.GH_US }} -password ${{ secrets.GH_PAT }}
+          docker login --username ${{ secrets.GH_US }} --password ${{ secrets.GH_PAT }}
           docker build . -t todo-app/$GITHUB_REPOSITORY_NAME:$GITHUB_SHA:latest
           docker push todo-app/$GITHUB_REPOSITORY_NAME:$GITHUB_SHA:latest
