--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker login --username ${{ secrets.GH_US }} --password ${{ secrets.GH_PAT }} ghcr.io
-          docker build . --tag ghcr.io/carlosmanuel02/todo-server-ghcr:lastest
+          docker-compose up -d --build todo-server
           docker push ghcr.io/carlosmanuel02/todo-server-ghcr:lastest
